--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile files('libs/libDaumMapAndroid.jar')
-    compile files('libs/libDaumMapEngineApi.jar')
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-maps:9.4.0'
+    compile 'com.google.android.gms:play-services-location:9.4.0'
     compile 'com.google.maps:google-maps-services:0.1.6'
     compile 'com.google.maps.android:android-maps-utils:0.3.4'
 
